[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Node

func _ready():
	pass
	#for i in get_children():
	#	i.text = places[i.get_index()]

###delete me
"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -360.0
margin_bottom = -640.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartSearchBar" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 32.0
margin_top = 120.0
margin_right = 328.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 80, 8 )
placeholder_text = "Start"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 328.0
margin_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 12.0
margin_bottom = 92.0
script = SubResource( 1 )

[node name="Button1" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0

[node name="Button2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 12.0
margin_bottom = 44.0

[node name="Button3" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 12.0
margin_bottom = 68.0

[node name="Button4" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 12.0
margin_bottom = 92.0

[node name="EndSearchBar" type="LineEdit" parent="."]
margin_left = 32.0
margin_top = 320.0
margin_right = 328.0
margin_bottom = 344.0
placeholder_text = "Destination"

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 32.0
margin_top = 232.0
margin_right = 328.0
margin_bottom = 296.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer2"]
margin_right = 12.0
margin_bottom = 92.0

[node name="Button1" type="Button" parent="ScrollContainer2/VBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0

[node name="Button2" type="Button" parent="ScrollContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 12.0
margin_bottom = 44.0

[node name="Button3" type="Button" parent="ScrollContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 12.0
margin_bottom = 68.0

[node name="Button4" type="Button" parent="ScrollContainer2/VBoxContainer"]
margin_top = 72.0
margin_right = 12.0
margin_bottom = 92.0

[connection signal="text_changed" from="StartSearchBar" to="." method="_on_StartSearchBar_text_changed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button1" to="." method="_on_Button_pressed_Start" binds= [ "Button1" ]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button2" to="." method="_on_Button_pressed_Start" binds= [ "Button2" ]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button3" to="." method="_on_Button_pressed_Start" binds= [ "Button3" ]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button4" to="." method="_on_Button_pressed_Start" binds= [ "Button4" ]]
[connection signal="text_changed" from="EndSearchBar" to="." method="_on_EndSearchBar_text_changed"]
[connection signal="pressed" from="ScrollContainer2/VBoxContainer/Button1" to="." method="_on_Button_pressed_End" binds= [ "Button1" ]]
[connection signal="pressed" from="ScrollContainer2/VBoxContainer/Button2" to="." method="_on_Button_pressed_End" binds= [ "Button2" ]]
[connection signal="pressed" from="ScrollContainer2/VBoxContainer/Button3" to="." method="_on_Button_pressed_End" binds= [ "Button3" ]]
[connection signal="pressed" from="ScrollContainer2/VBoxContainer/Button4" to="." method="_on_Button_pressed_End" binds= [ "Button4" ]]
